# app

./: .gitignore  README.md  Vagrantfile
.github/workflows/: auto-release.yml  pylint.yml
.vagrant/machines/controller/vmware_desktop/: vagrant_cwd
ansible/: inventory.ctg
ansible/playbooks/: k8s-setup.yml
frontend/: dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: API.js  DashBoard.js  LibVersion.js  Predict.js
kubernetes/: deployment.yaml  ingress.yaml  service.yaml  servicemonitor.yaml
service/: dockerfile  pyproject.toml
service/src/: app.py
