[tool.poetry]
name = "app-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
flask = "^3.0.3"
lib-version-group3 = "^0.1.4"
flask-cors = "^4.0.1"
requests = "^2.31.0"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pylint = "3.1.0"
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
